@@ -217,6 +217,10 @@
  *   until the left edge.
  * - @c "edge,right" - This is called when the gengrid is scrolled
  *   until the right edge.
+ * - @c "highlighted" - an item in the list is pressed and highlighted.
+ *   The %c event_info parameter is the item that was highlighted.
+ * - @c "unhighlighted" - an item in the list is unpressed and unhighlighted.
+ *   The %c event_info parameter is the item that was unhighlighted.
  *
  * Supported elm_object common APIs
  * @li elm_object_signal_emit()
